Fix animales, base products a produccion