@@ -8,18 +8,17 @@ import com.example.Products.Entity.Products;
 import com.example.Products.Entity.enums.CategoriaGranja;
 import com.example.Products.Entity.enums.Marca;
 import com.example.Products.Entity.enums.type;
-import com.example.Products.Repository.productRepository;
 import com.example.Products.Service.productService;
-import lombok.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import com.example.Products.Repository.productRepository;
+import lombok.*;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class productServiceImpl implements productService {
@@ -32,14 +31,25 @@ public class productServiceImpl implements productService {
 
     @Override
     public ProductDTO saveProduct(ProductDTO producto) {
-        // Validamos los campos según el tipo de animal
-        validateProductFields(producto);
-        
         // Buscar si ya existe un producto similar
         Products existingProduct = findExistingProduct(producto);
         
         if (existingProduct != null) {
-            throw new IllegalArgumentException("Ya existe un producto con los mismos datos.");
+            // Mensaje de error adaptado según el tipo de producto
+            String mensajeError;
+            if (producto.getAnimalType() == type.GRANJA) {
+                mensajeError = "Ya existe un producto con los mismos datos: " + 
+                    producto.getNombre() + ", " + 
+                    producto.getCategoriaGranja() + ", " + 
+                    producto.getKg();
+            } else {
+                mensajeError = "Ya existe un producto con los mismos datos: " + 
+                    producto.getMarca() + ", " + 
+                    producto.getTipoAlimento() + ", " + 
+                    producto.getKg() + 
+                    (producto.getTipoRaza() != null ? ", " + producto.getTipoRaza() : "");
+            }
+            throw new IllegalArgumentException(mensajeError);
         }
         
         // Si no existe, creamos un nuevo producto
@@ -50,67 +60,33 @@ public class productServiceImpl implements productService {
         Products savedProduct = productRepository.save(product);
         return modelMapper.modelMapper().map(savedProduct, ProductDTO.class);
     }
-    
-    private void validateProductFields(ProductDTO producto) {
-        if (producto.getAnimalType() == type.GRANJA) {
-            // Validaciones para productos de granja
-            if (producto.getNombre() == null || producto.getNombre().isEmpty()) {
-                throw new IllegalArgumentException("El nombre es obligatorio para productos de granja");
-            }
-            if (producto.getCategoriaGranja() == null) {
-                throw new IllegalArgumentException("La categoría de granja es obligatoria para productos de granja");
-            }
-        } else {
-            // Validaciones para productos de mascota (perros/gatos)
-            if (producto.getMarca() == null) {
-                throw new IllegalArgumentException("La marca es obligatoria para productos de mascota");
-            }
-            if (producto.getTipoAlimento() == null) {
-                throw new IllegalArgumentException("El tipo de alimento es obligatorio para productos de mascota");
-            }
-        }
-        
-        // Validaciones comunes para todos los productos
-        if (producto.getKg() == null) {
-            throw new IllegalArgumentException("El peso (kg) es obligatorio");
-        }
-        if (producto.getPriceMinorista() == null) {
-            throw new IllegalArgumentException("El precio minorista es obligatorio");
-        }
-        if (producto.getPriceMayorista() == null) {
-            throw new IllegalArgumentException("El precio mayorista es obligatorio");
-        }
-        if (producto.getStock() == null) {
-            throw new IllegalArgumentException("El stock es obligatorio");
-        }
-    }
 
     private Products findExistingProduct(ProductDTO producto) {
-        // Para productos de granja buscamos por nombre y categoría
+        // Si es un producto de tipo GRANJA, buscar por nombre y categoría
         if (producto.getAnimalType() == type.GRANJA) {
             return productRepository.findAll().stream()
                 .filter(p -> 
                     p.getAnimalType() == type.GRANJA &&
-                    Objects.equals(p.getNombre(), producto.getNombre()) &&
-                    Objects.equals(p.getCategoriaGranja(), producto.getCategoriaGranja()) &&
+                    p.getNombre().equals(producto.getNombre()) &&
+                    p.getCategoriaGranja().equals(producto.getCategoriaGranja()) &&
                     p.getKg().equals(producto.getKg())
                 )
                 .findFirst()
                 .orElse(null);
-        } else {
-            // Para productos de mascota buscamos por marca, tipo alimento, etc.
-            return productRepository.findAll().stream()
-                .filter(p -> 
-                    p.getAnimalType() != type.GRANJA &&
-                    Objects.equals(p.getMarca(), producto.getMarca()) &&
-                    Objects.equals(p.getTipoAlimento(), producto.getTipoAlimento()) &&
-                    p.getKg().equals(producto.getKg()) &&
-                    Objects.equals(p.getTipoRaza(), producto.getTipoRaza()) &&
-                    p.getAnimalType().equals(producto.getAnimalType())
-                )
-                .findFirst()
-                .orElse(null);
         }
+        
+        // Para productos de mascotas, buscar por marca, tipo de alimento y tipo de raza
+        return productRepository.findAll().stream()
+            .filter(p -> 
+                p.getAnimalType() != type.GRANJA &&
+                // Agregamos una verificación para evitar NullPointerException
+                (p.getMarca() != null && producto.getMarca() != null && p.getMarca().equals(producto.getMarca())) &&
+                (p.getTipoAlimento() != null && producto.getTipoAlimento() != null && p.getTipoAlimento().equals(producto.getTipoAlimento())) &&
+                p.getKg().equals(producto.getKg()) &&
+                Objects.equals(p.getTipoRaza(), producto.getTipoRaza())
+            )
+            .findFirst()
+            .orElse(null);
     }
 
     @Override
@@ -120,6 +96,11 @@ public class productServiceImpl implements productService {
         
         // Guardar temporalmente el valor createdAt original
         LocalDateTime createdAtOriginal = existingProduct.getCreatedAt();
+
+        // Si es un producto de tipo GRANJA, establecer la marca como null
+        if (product.getAnimalType() == type.GRANJA) {
+            product.setMarca(null);
+        }
         
         // Hacer el mapeo del DTO al producto existente
         modelMapper.modelMapper().map(product, existingProduct);
@@ -127,6 +108,7 @@ public class productServiceImpl implements productService {
         // Asegurar que se mantenga el createdAt original
         existingProduct.setCreatedAt(createdAtOriginal);
         existingProduct.setUpdatedAt(LocalDateTime.now());
+        existingProduct.setTipoRaza(product.getTipoRaza());
 
         Products savedProduct = productRepository.save(existingProduct);
         return modelMapper.modelMapper().map(savedProduct, ProductDTO.class);
@@ -134,6 +116,7 @@ public class productServiceImpl implements productService {
 
     @Override
     public void deleteProduct(long id) {
+        // TODO: Implementar eliminación
         Products producto = productRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("No existe el producto con id: " + id));
 
@@ -149,62 +132,49 @@ public class productServiceImpl implements productService {
 
     @Override
     public List<ProductListDTO> getAllProducts() {
+        // TODO: Implementar obtención de todos los productos
         List<Products> products = productRepository.findAll();
-        return products.stream()
+        List<ProductListDTO> productDTOs = products.stream()
                 .map(product -> modelMapper.modelMapper().map(product, ProductListDTO.class))
-                .collect(Collectors.toList());
+                .toList();
+        return productDTOs;
     }
-    
+
     @Override
     public List<ProductListDTO> getProductosMascotas() {
-        List<Products> products = productRepository.findAll();
-        return products.stream()
-                .filter(p -> p.getAnimalType() == type.PERROS || p.getAnimalType() == type.GATOS)
-                .map(product -> modelMapper.modelMapper().map(product, ProductListDTO.class))
-                .collect(Collectors.toList());
+        return List.of();
     }
-    
+
     @Override
     public List<ProductListDTO> getProductosGranja() {
-        List<Products> products = productRepository.findAll();
-        return products.stream()
-                .filter(p -> p.getAnimalType() == type.GRANJA)
-                .map(product -> modelMapper.modelMapper().map(product, ProductListDTO.class))
-                .collect(Collectors.toList());
+        return List.of();
     }
-    
+
     @Override
     public List<ProductListDTO> getProductosPorTipoAnimal(type tipoAnimal) {
-        List<Products> products = productRepository.findAll();
-        return products.stream()
-                .filter(p -> p.getAnimalType() == tipoAnimal)
-                .map(product -> modelMapper.modelMapper().map(product, ProductListDTO.class))
-                .collect(Collectors.toList());
+        return List.of();
     }
-    
+
     @Override
     public List<ProductListDTO> getProductosPorCategoriaGranja(CategoriaGranja categoriaGranja) {
-        List<Products> products = productRepository.findAll();
-        return products.stream()
-                .filter(p -> p.getAnimalType() == type.GRANJA && p.getCategoriaGranja() == categoriaGranja)
-                .map(product -> modelMapper.modelMapper().map(product, ProductListDTO.class))
-                .collect(Collectors.toList());
+        return List.of();
     }
 
     @Override
     public ProductDTO getProductById(long id) {
-        Products producto = productRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("No existe el producto con id: " + id));
-        return modelMapper.modelMapper().map(producto, ProductDTO.class);
+        // TODO: Implementar obtención por ID
+        return null;
     }
 
     @Override
     public void aumentarPrecio(double porcentaje, String marca) {
+
+
         if(porcentaje < -50) {
             throw new IllegalArgumentException("No se puede hacer un descuento de mas del 50%");
         }
 
-        if(marca != null && !marca.isEmpty()) {
+        if( marca != null && !marca.isEmpty()) {
             String marca1 = marca.toUpperCase();
             Marca enumMarca = Marca.valueOf(marca1);
             List<Products> productos = productRepository.findByMarca(enumMarca);
@@ -218,7 +188,9 @@ public class productServiceImpl implements productService {
                 producto.setUpdatedAt(LocalDateTime.now());
                 productRepository.save(producto);
             }
-        } else {
+
+        }
+        else {
             List<Products> productos = productRepository.findAll();
 
             for (Products producto : productos) {
@@ -231,11 +203,18 @@ public class productServiceImpl implements productService {
                 productRepository.save(producto);
             }
         }
+
+
     }
 
     @Override
     public List<Marca> getAllMarcas() {
         // Devolvemos directamente todos los valores del enum Marca
-        return Arrays.asList(Marca.values());
+        List<Marca> marcas = Arrays.asList(Marca.values());
+        
+        // Eliminar cualquier posible referencia a SIN_MARCA que pueda causar problemas
+        return marcas.stream()
+            .filter(Objects::nonNull)
+            .toList();
     }
 }
